added buckets and keyboard control

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 					-ms-transform: rotate(45deg); /* IE 9 */
 					-webkit-transform: rotate(45deg); /* Safari and Chrome */
 					position:absolute; /* left:200px; top:150px;	 */ }
+					
+					div{
+						width: 100px; height:70px;
+						background-color:rgba(51,51,153,.5);
+						border-bottom-left-radius:25px;
+						border-bottom-right-radius:25px;
+						position:absolute;
+					}
 </style>
 </head>
 
